# Schotten-Totten

./: .gitignore  .obsidian.vimrc  CMakeLists.txt  README.md  UML final
.github/: pull_request_template.md
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  hotkeys.json  starred.json  workspace.json
Documentation/: English_Terminology.md  UML.md
LO21 QT/: Board.cpp  Board.h  BoardView.cpp  BoardView.h  Board_copy.h  Border.cpp  BorderView.cpp  BorderView.h  Card.cpp  CardView.cpp  Combination.cpp  CombinationView.cpp  Console.cpp  Deck.cpp  Deck.h  DeckFactory.cpp  DeckView.h  Dernier.pro  Game.cpp  Game.h  GameTracker.h  HandView.cpp  HandView.h  MainWindow.cpp  MainWindow.h  MyMessageBox.h  Player.cpp  Player.h  TacticHandler.cpp  TacticHandler.h  main.cpp  signalmessagebox.cpp
LO21 QT/Projet_LO21_QT/: Border.h  Card.h  CardView.cpp  CardView.h  Combination.cpp  Combination.h  CombinationView.cpp  CombinationView.h  Console.h  DeckFactory.h  DeckView.cpp  DeckView.h  Game.cpp  GameConfiguration.cpp  GameView.cpp  HandView.cpp  MainWindow.cpp  MainWindow.h  MainWindow2.cpp  MainWindow2.h  Player.cpp  Projet_LO21_QT.pro  SignalMessageBox.cpp  SignalMessageBox.h  TacticHandler.cpp  borderview.cpp
LO21_Project copy/: LO21_Project.pro  main.cpp  main_git.cpp
LO21_Project copy/MainWindow/: MainWindow.cpp  MainWindow.h
LO21_Project copy/board/: Board.cpp  Board.h  Border.h  GameTracker.cpp
LO21_Project copy/buttons/: BorderButton.cpp  BorderButton.h  CardButton.cpp  CardButton.h
LO21_Project copy/console/: console.cpp  console.h
LO21_Project copy/deck/: Card.cpp  Deck.cpp
LO21_Project copy/game/: Game.cpp  Game.h
Projet_LO21_QT/: Board.cpp  Board.h  Border.cpp  Border.h  Card.cpp  Card.h  CardView.cpp  CardView.h  Combination.cpp  Combination.h  Console.cpp  Console.h  Deck.h  DeckFactory.h  Game.cpp  Game.h  GameConfiguration.cpp  GameConfiguration.h  GameTracker.cpp  GameTracker.h  GameView.h  MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  Projet_LO21_QT.pro  TacticHandler.cpp  TacticHandler.h  boardview.cpp  boardview.h  main.cpp
documentation/: Tasks.md  UML.md  UML_final.md  UML_v2.md  aide_git.md  rapport_2.md
src/: Card.cpp  Card.h  CardView.cpp  CardView.h  Card_game.cpp  Card_game.h  Console.cpp  Console.h  Deck.h  Game.cpp  Game.h  GameVIew.cpp  GameVIew.h  GameView.cpp  GameView.h  Game_interface.cpp  Game_interface.h  LO21_QT_project.pro  Player.cpp  Player.h  Stone.cpp  Stone.h  console.cpp  console.h  coucou les loulou.cpp  main.cpp  test.pro
(+103 files in other folders)
